--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nanoid": "^5.0.7",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.4",
